[project]
name = "SpecOutLines"
version = "1.0.0"
authors = [{name = "Sophia Flury"}]
description = "model spectral line profiles for astrophysical winds, bubbles, and outflows"
readme = {file = "README.md", content-type = "text/markdown"}
requires-python = ">=3.12.9"
classifiers = ["Programming Language :: Python :: 3",
               "Programming Language :: Python :: 3.12",
               "Operating System :: OS Independent",
]
dependencies = ["numpy>=2.4.1",
                "scipy>=1.17.0",
                "matplotlib>=3.10.0"]
license = "GPL-3.0"
license-files = ["LICENSE"]
[project.urls]
Homepage      = "https://github.com/sflury/OutLines"
Issues        = "https://github.com/sflury/OutLines/issues"
Documentation = "https://github.com/sflury/OutLines/wiki"
[build-system]
requires = ["setuptools>=77.0"]
build-backend = "setuptools.build_meta"
